--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </div>
     <div id="navigation">
       <ul>
-      <li class="selected"><a href="http://turing.manhattan.edu/~apineda01/">Home</a> </li>
-      <li><a title="Teaching" href="http://turing.manhattan.edu/~apineda01/teaching">Teaching</a> </li>
-      <li><a title="Reseach" href="http://turing.manhattan.edu/~apineda01/research">Research</a> </li>
-      <li><a title="Service" href="http://turing.manhattan.edu/~apineda01/service">Service</a> </li>
-      <li><a title="Personal" href="http://turing.manhattan.edu/~apineda01/personal">Personal</a> </li>
+      <li class="selected"><a href="index">Home</a> </li>
+      <li><a title="Teaching" href="teaching">Teaching</a> </li>
+      <li><a title="Reseach" href="research">Research</a> </li>
+      <li><a title="Service" href="service">Service</a> </li>
+      <li><a title="Personal" href="personal">Personal</a> </li>
       </ul>
     </div>
     <div id="content">
@@ -59,7 +59,7 @@
     </div>
   </div>
   <div id="footer">
-  <p>© 2016-Present <a href="http://turing.manhattan.edu/~apineda01/">Angel R. Pineda</a> | Design Based on Template by <a href="http://andreasviklund.com/">Andreas 
+  <p>Â© 2016-Present <a href="http://turing.manhattan.edu/~apineda01/">Angel R. Pineda</a> | Design Based on Template by <a href="http://andreasviklund.com/">Andreas 
 Viklund</a></p>
    </div>
   </div>
