--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </div>
     <div id="navigation">
       <ul>
-      <li class="selected"><a href="index">Home</a> </li>
+      <li><a class="selected"><a href="index">Home</a> </li>
       <li><a title="Teaching" href="teaching">Teaching</a> </li>
-      <li><a title="Reseach" href="research">Research</a> </li>
+      <li><a title="Research" href="research">Research</a> </li>
       <li><a title="Service" href="service">Service</a> </li>
       <li><a title="Personal" href="personal">Personal</a> </li>
       </ul>
@@ -59,7 +59,7 @@
     </div>
   </div>
   <div id="footer">
-  <p>© 2016-Present <a href="http://turing.manhattan.edu/~apineda01/">Angel R. Pineda</a> | Design Based on Template by <a href="http://andreasviklund.com/">Andreas 
+  <p>© 2016-Present <a href="index">Angel R. Pineda</a> | Design Based on Template by <a href="http://andreasviklund.com/">Andreas 
 Viklund</a></p>
    </div>
   </div>
