--- a/research.html
+++ b/research.html
@@ -16,11 +16,11 @@
     </div>
     <div id="navigation">
       <ul>
-      <li><a href="http://turing.manhattan.edu/~apineda01/">Home</a> </li>
-      <li><a title="Teaching" href="http://turing.manhattan.edu/~apineda01/teaching">Teaching</a> </li>
-      <li class="selected"><a title="Reseach" href="http://turing.manhattan.edu/~apineda01/research">Research</a> </li>
-      <li><a title="Service" href="http://turing.manhattan.edu/~apineda01/service">Service</a> </li>
-      <li><a title="Personal" href="http://turing.manhattan.edu/~apineda01/personal">Personal</a> </li>
+      <li><a href="index">Home</a> </li>
+      <li><a title="Teaching" href="teaching">Teaching</a> </li>
+      <li class="selected"><a title="Research" href="research">Research</a> </li>
+      <li><a title="Service" href="service">Service</a> </li>
+      <li><a title="Personal" href="personal">Personal</a> </li>
       </ul>
     </div>
     <div id="content">
@@ -48,7 +48,7 @@
 		 
           If you are a student at Manhattan College and are interested in this research, come and talk to me about it.  I am always open to talk to students about research opportunities. <br>
           <br>
-          For a list of publications, see my <a href="http://turing.manhattan.edu/~apineda01/PinedaCV.pdf">C. V.</a>  and <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=N_Xo3mcAAAAJ"> Google Scholar Citation Report.</a> 
+          For a list of publications, see my <a href="PinedaCV.pdf">C. V.</a>  and <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=N_Xo3mcAAAAJ"> Google Scholar Citation Report.</a> 
       </p></div>
       <div class="splitcontentright">
         <div>
@@ -62,7 +62,7 @@
     </div>
   </div>
   <div id="footer">
-  <p>© 2016-Present <a href="http://turing.manhattan.edu/~apineda01/">Angel R. Pineda</a> | Design Based on Template by <a href="http://andreasviklund.com/">Andreas 
+  <p>Â© 2016-Present <a href="index">Angel R. Pineda</a> | Design Based on Template by <a href="http://andreasviklund.com/">Andreas 
 Viklund</a></p>
    </div>
   </div>
