--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="splitcontentleft">
           <h2>Associate Professor of Mathematics</h2>
         <p>
-          <a PinedaCV.pdf >Curriculum Vitae</a>
+          <a href="PinedaCV.pdf" >Curriculum Vitae</a>
           </p><p align="justify">
           
           I became a college professor because I am extremely curious.  I really enjoy learning and 
