--- a/teaching.html
+++ b/teaching.html
@@ -16,11 +16,11 @@
     </div>
     <div id="navigation">
       <ul>
-	  <li><a href="http://turing.manhattan.edu/~apineda01/">Home</a> </li>
-      <li class="selected"><a title="Teaching" href="http://turing.manhattan.edu/~apineda01/teaching">Teaching</a> </li>
-      <li><a title="Reseach" href="http://turing.manhattan.edu/~apineda01/research">Research</a> </li>
-      <li><a title="Service" href="http://turing.manhattan.edu/~apineda01/service">Service</a> </li>
-      <li><a title="Personal" href="http://turing.manhattan.edu/~apineda01/personal">Personal</a> </li>
+	  <li><a href="index">Home</a> </li>
+      <li class="selected"><a title="Teaching" href="teaching">Teaching</a> </li>
+      <li><a title="Research" href="research">Research</a> </li>
+      <li><a title="Service" href="service">Service</a> </li>
+      <li><a title="Personal" href="personal">Personal</a> </li>
       </ul>
     </div>
     <div id="content">
@@ -31,24 +31,24 @@
           </p><p>
           </p><h3>Teaching Information for Fall 2020:</h3>
           Courses:<br>
-		  <a href="http://turing.manhattan.edu/~apineda01/MATH336S21Syllabus.pdf">MATH 336: Applied Statistics </a> <br>
+		  <a href="MATH336S21Syllabus.pdf">MATH 336: Applied Statistics </a> <br>
 		 
 		  
           Office Hours:<br>
           Tuesday 11:00-11:50 am, Wednesday 2-2:50 pm, and Friday 1:00-1:50 pm, or by appointment.<br>
           <br>
           <h3>Previous Courses Taught at Manhattan College:</h3>
-		  <a href="http://turing.manhattan.edu/~apineda01/MATH158S19Syllabus.pdf">MATH 158: Introduction to Mathematical Computation </a> <br> 
-          <a href="http://turing.manhattan.edu/~apineda01/MATH186S16Syllabus.pdf">MATH 186: Calculus II</a> <br>
-		  <a href="http://turing.manhattan.edu/~apineda01/MATH230F17Syllabus.pdf">MATH 230: Elementary Statistics </a> <br>
-		  <a href="http://turing.manhattan.edu/~apineda01/MATH285F20Syllabus.pdf">MATH 285: Calculus III </a> <br>
-		  <a href="http://turing.manhattan.edu/~apineda01/MATH331F15Syllabus.pdf">MATH 331: Probability</a> <br>
-		  <a href="http://turing.manhattan.edu/~apineda01/MATG511F20Syllabus.pdf">MATG 511: Computational Methods for Analytics </a> <br>
-		  <a href="http://turing.manhattan.edu/~apineda01/MATG630F18Syllabus.pdf">MATG 630: Probability and Statistics for Analytics </a> <br>
-		  <a href="http://turing.manhattan.edu/~apineda01/MATG632F15Syllabus.pdf">MATG 632: Statistical Inference </a> <br>
-		  <a href="http://turing.manhattan.edu/~apineda01/MATG633S18Syllabus.pdf">MATG 633: Advanced Statistical Inference </a> <br>
-		  <a href="http://turing.manhattan.edu/~apineda01/MATG635S20Syllabus.pdf">MATG 635: Probabilistic Methods </a> <br>
-          <a href="http://turing.manhattan.edu/~apineda01/MATG639F17Syllabus.pdf">MATG 639: Statistical Learning </a> <br>
+		  <a href="MATH158S19Syllabus.pdf">MATH 158: Introduction to Mathematical Computation </a> <br> 
+          	  <a href="MATH186S16Syllabus.pdf">MATH 186: Calculus II</a> <br>
+		  <a href="MATH230F17Syllabus.pdf">MATH 230: Elementary Statistics </a> <br>
+		  <a href="MATH285F20Syllabus.pdf">MATH 285: Calculus III </a> <br>
+		  <a href="MATH331F15Syllabus.pdf">MATH 331: Probability</a> <br>
+		  <a href="MATG511F20Syllabus.pdf">MATG 511: Computational Methods for Analytics </a> <br>
+		  <a href="MATG630F18Syllabus.pdf">MATG 630: Probability and Statistics for Analytics </a> <br>
+		  <a href="MATG632F15Syllabus.pdf">MATG 632: Statistical Inference </a> <br>
+		  <a href="MATG633S18Syllabus.pdf">MATG 633: Advanced Statistical Inference </a> <br>
+		  <a href="MATG635S20Syllabus.pdf">MATG 635: Probabilistic Methods </a> <br>
+                  <a href="MATG639F17Syllabus.pdf">MATG 639: Statistical Learning </a> <br>
           <br>
       </div>
       <div class="splitcontentright">
@@ -62,7 +62,7 @@
     </div>
   </div>
   <div id="footer">
-  <p>© 2016-Present <a href="http://turing.manhattan.edu/~apineda01/">Angel R. Pineda</a> | Design Based on Template by <a href="http://andreasviklund.com/">Andreas 
+  <p>Â© 2016-Present <a href="index">Angel R. Pineda</a> | Design Based on Template by <a href="http://andreasviklund.com/">Andreas 
 Viklund</a></p>
    </div>
   </div>
