--- a/teaching.html
+++ b/teaching.html
@@ -29,13 +29,13 @@
           <p align="justify">
            I feel that the best path for learning is through enjoyment.  I strive to have my students see the joy in math.  In many of my classes, students work on projects exploring something related to our class which interests them. A major emphasis in my teaching is getting students involved in research.  I am also interested in problem solving, industrial projects, service learning and social justice in mathematics education.
           </p><p>
-          </p><h3>Teaching Information for Fall 2020:</h3>
+          </p><h3>Teaching Information for Fall 2021:</h3>
           Courses:<br>
-		  <a href="MATH336S21Syllabus.pdf">MATH 336: Applied Statistics </a> <br>
+		  <a href="MATG511F21Syllabus.pdf">MATG 511: Computational Methods for Analytics </a> <br>
+	          <a href="MATG630F21Syllabus.pdf">MATG 630: Probability and Statistics for Analytics </a> <br>
 		 
-		  
           Office Hours:<br>
-          Tuesday 11:00-11:50 am, Wednesday 2-2:50 pm, and Friday 1:00-1:50 pm, or by appointment.<br>
+          Monday 3:30-4:20 am, Thursday 2-2:50 pm, or by appointment.<br>
           <br>
           <h3>Previous Courses Taught at Manhattan College:</h3>
 		  <a href="MATH158S19Syllabus.pdf">MATH 158: Introduction to Mathematical Computation </a> <br> 
@@ -43,6 +43,7 @@
 		  <a href="MATH230F17Syllabus.pdf">MATH 230: Elementary Statistics </a> <br>
 		  <a href="MATH285F20Syllabus.pdf">MATH 285: Calculus III </a> <br>
 		  <a href="MATH331F15Syllabus.pdf">MATH 331: Probability</a> <br>
+	          <a href="MATH336S21Syllabus.pdf">MATH 336: Applied Statistics </a> <br>
 		  <a href="MATG511F20Syllabus.pdf">MATG 511: Computational Methods for Analytics </a> <br>
 		  <a href="MATG630F18Syllabus.pdf">MATG 630: Probability and Statistics for Analytics </a> <br>
 		  <a href="MATG632F15Syllabus.pdf">MATG 632: Statistical Inference </a> <br>
