--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div id="content">
       <div class="splitcontentleft">
-          <h2>Associate Professor of Mathematics</h2>
+          <h2>Professor of Mathematics</h2>
         <p>
           <a href="PinedaCV.pdf" >Curriculum Vitae</a>
           </p><p align="justify">
