--- a/teaching.html
+++ b/teaching.html
@@ -29,12 +29,14 @@
           <p align="justify">
            I feel that the best path for learning is through enjoyment.  I strive to have my students see the joy in math.  In many of my classes, students work on projects exploring something related to our class which interests them. A major emphasis in my teaching is getting students involved in research.  I am also interested in problem solving, industrial projects, service learning and social justice in mathematics education.
           </p><p>
-          </p><h3>Teaching Information for Spring 2022:</h3>
-          Courses:<br>
-		  <a href="MATG557S22Syllabus.pdf">MATG 557: Machine Learning </a> <br>
-		 
+          </p><h3>Teaching Information for Academic Year 2022-2023:</h3>
+	      On sabbatical leave.
+          
+	  <!-- Courses:<br>
+ 
           Office Hours:<br>
           Monday 5:50-6:20 am, Thursday 5:50-6:20 pm, or by appointment.<br>
+	      -->
           <br>
           <h3>Previous Courses Taught at Manhattan College:</h3>
 		  <a href="MATH158S19Syllabus.pdf">MATH 158: Introduction to Mathematical Computation </a> <br> 
@@ -44,6 +46,7 @@
 		  <a href="MATH331F15Syllabus.pdf">MATH 331: Probability</a> <br>
 	          <a href="MATH336S21Syllabus.pdf">MATH 336: Applied Statistics </a> <br>
 		  <a href="MATG511F21Syllabus.pdf">MATG 511: Computational Methods for Analytics </a> <br>
+	          <a href="MATG557S22Syllabus.pdf">MATG 557: Machine Learning </a> <br>
 		  <a href="MATG630F21Syllabus.pdf">MATG 630: Probability and Statistics for Analytics </a> <br>
 		  <a href="MATG632F15Syllabus.pdf">MATG 632: Statistical Inference </a> <br>
 		  <a href="MATG633S18Syllabus.pdf">MATG 633: Advanced Statistical Inference </a> <br>
