--- a/teaching.html
+++ b/teaching.html
@@ -26,11 +26,11 @@
     <div id="content">
       <div class="splitcontentleft">
           <h3>Teaching Overview</h3>
-          <p align="justify">
+          </p align="justify">
            I feel that the best path for learning is through enjoyment.  I strive to have my students see the joy in math.  In many of my classes, students work on projects exploring something related to our class which interests them. A major emphasis in my teaching is getting students involved in research.  I am also interested in problem solving, industrial projects, service learning and social justice in mathematics education.
-          </p><p>
+          <p>
           </p><h3>Teaching Information for Academic Year 2022-2023:</h3>
-	      On sabbatical leave.
+	      On sabbatical leave. <br>
           
 	  <!-- Courses:<br>
  
