--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
       <div class="splitcontentright">
         <div>
-          <img width="250" src="./Angel.jpg"> 
+          <img width="250" src="./Angel2023.jpg"> 
         </div>
     </div>
   </div>
