--- a/research.html
+++ b/research.html
@@ -57,7 +57,7 @@
         <br>
         The Manhattan College MoMI (Mathematics of Medical Imaging) group is a team of students and I working on research together.  
 		<img width="250" src="./SanaHopeMelissa.jpg">
-		Recent graduates of the MoMI group.
+		Graduates of the MoMI group.
         
     </div>
   </div>
