--- a/service.html
+++ b/service.html
@@ -29,7 +29,7 @@
       
           <h3>Service Overview</h3>
           <p align="justify">
-          Within the mathematics department, I have served as graduate director, internship coordinator and in several other committees.  At the college level, I have served in the advisory board of the Center for the Study of the Future of Education, represented the school of science in the senate and served in the summer grants committee. </p> 
+          Within the mathematics department, I have served as graduate director, internship coordinator and in several other committees.  At the college level, I have served in the advisory board of the Center for the Study of the Future of Education, represented the school of science in the senate and served in the summer grants committee among other committees. </p> 
 		  
 <p align="justify"> In June of 2009 and July of 2010, I taught a course in numerical analysis in the Master's Program in Mathematics at the Royal University of Phnom Penh (RUPP), in Cambodia as part of the <a title="volunteer lecturer program of the International Mathematical Union" href="https://www.mathunion.org/cdc/lecturing/volunteer-lecturer-program"> volunteer lecturer program (VLP) </a>  of the National Academy of Sciences and the International Mathematical Union. An <a href="https://archive.siam.org/news/news.php?id=1720"> article was published in SIAM News </a> about my experience teaching in Cambodia. </p>
 
@@ -38,7 +38,7 @@ In part because of this experience, I became part of a team that published an <a
 From 2015 to 2018 I was a member of the IMU <a href="https://www.mathunion.org/cdc/about-cdc/about-cdc"> Commission for Developing Countries </a>. As part of that committee, I moderated a <a href="https://www.mathunion.org/cdc/icm/cdc-panel-discussion-and-poster-session-during-icm-2018"> panel on Strengthening Mathematics in the Developing World</a> at the 2018 International Congress of Mathematicians (ICM) in Rio de Janeiro, Brazil.  A <a href="https://www.youtube.com/watch?v=wraXvkf14Y4&feature=youtu.be"> video </a> was produced by ICM TV about the panel.  
 	      I am currently the secretary  <a href="https://www.mathunion.org/cdc/scholarships/graduate-scholarships/graduate-assistantships-developing-countries"> Graduate Assistantships in Developing Countries (GRAID) </a> 
 	      program which provides support to mathematics graduate students in developing countries. A paper in the Notices of the American Mathematical Society describes GRAID, <a title="GRAID Notices Article" href="https://www.ams.org/notices/202308/rnoti-p1281.pdf"> Graduate Assistantships in Developing 
-		      Countries (GRAID) Supporting Mathematics Graduate Students in the Countries that Need it Most.</a> </p>
+		      Countries (GRAID) Supporting Mathematics Graduate Students in the Countries that Need it Most.</a> In order to help in the funding for GRAID, I am part of a group of mathematicians who run races to fundraise for GRAID <a title="Run for GRAID" href="https://sites.google.com/manhattan.edu/runforgraid/"> Run For GRAID.</a> </p>
 
 <p align="justify"> In terms of service to the research community as a whole, I serve as reviewer for several research journals in medical imaging. </p>
 <br>
