--- a/research.html
+++ b/research.html
@@ -41,7 +41,9 @@
 		   and reconstruction of undersampled MRI images.  The reconstruction methods include neural networks and data agreement which introduce interesting questions in optimization
 		   and machine learning.  This work is done in collaboration with student researchers
 		   at Manhattan College, and consultants at the University of Southern California, University of California, Santa Barbara, University of Wisconsin, Madison and New York University.  This project was previously funded by 
-		   <a href="https://projectreporter.nih.gov/project_info_description.cfm?aid=9880534&icde=52601021">  NIH R-15 grant 1R15EB029172-01 </a> and is currently being funded by <a href="https://reporter.nih.gov/search/UoQqlUTWEUCxK7CFWwPdJA/project-details/10730707">  NIH R-15 grant 2R15EB029172-02 </a>.
+		   <a href="https://projectreporter.nih.gov/project_info_description.cfm?aid=9880534&icde=52601021">  NIH R-15 grant 1R15EB029172-01 </a> and is 
+		  currently being funded by <a href="https://reporter.nih.gov/search/UoQqlUTWEUCxK7CFWwPdJA/project-details/10730707">  NIH R-15 grant 2R15EB029172-02 </a>.  The code from the recently submitted
+		  of published peer-reviewed articles from my group can be found in our <a href="https://github.com/MoMI-Manhattan-College">  MoMI Manhattan College GitHub page </a>.
 		  
           </p><p align="justify">
 		  
