--- a/service.html
+++ b/service.html
@@ -49,7 +49,11 @@ From 2015 to 2018 I was a member of the IMU <a href="https://www.mathunion.org/c
         </div>
         <br>
         Students from one of my classes at RUPP.
-		
+	 <div>
+          <img width="250" src="./RunForGRAID-MayDayRace.png"> 
+        </div>
+        <br>
+        Run for GRAID Team at the May Day Race between Rutgers and Princeton.	
     </div>
   </div>
   <div id="footer">
