--- a/service.html
+++ b/service.html
@@ -52,7 +52,7 @@ From 2015 to 2018 I was a member of the IMU <a href="https://www.mathunion.org/c
 	 <div>
           <img width="250" src="./RunForGRAID-MayDayRace.png"> 
         </div>
-        Run for GRAID Team at the May Day Race between Rutgers and Princeton.	
+        <a title="Run for GRAID" href="https://sites.google.com/manhattan.edu/runforgraid/"> Run For GRAID</a> at the <a title="May Day Race" href="https://sites.math.rutgers.edu/~weibel/mayday.html">May Day Race <\a> between Rutgers and Princeton.	
     </div>
   </div>
   <div id="footer">
