--- a/personal.html
+++ b/personal.html
@@ -29,7 +29,11 @@
           <h3>Personal Overview</h3>
           <p align="justify">
           The reason why this section is in my work web page is because what a person does with their time outside of work
-          can affect their professional interactions.  People who are passionate about mathematics usually have a passion in other aspects in their life as well :-) Here are some of the things I do when I am not doing math: </p>
+          can affect their professional interactions.  I was honored to be included in a book about Latinx and Hispanic mathematicians in the US <a href="https://community.ams.org/membership/member-library/testimonios"> Testimonios. </a>  
+          The book is free to members of the American Mathematical Society and my chapter in the book is available online through the <a href="https://www.mathvalues.org/masterblog/testimonios-dr-angel-ramn-pineda-fortn"> Math Values Blog. </a>  
+          That chapter was an amazing opportunity for me to share my mathematical story starting with my grandmothers (abuelitas). <\p>
+            
+<p align="justify"> People who are passionate about mathematics usually have a passion in other aspects in their life as well :-) Here are some of the things I do when I am not doing math: </p>
 <p align="justify"> Family: I am married and have two sons.  My life now centers around a partnership in adventures together with my wife and sons.  </p>
 <p align="justify"> Travel: My biggest travel adventure was in between my postdoc and tenure track job when I backpacked through South America for 3 months.  Other cool trips I have been lucky enough to take have been to Ivory Coast, Japan, India and Southeast Asia. A recent discovery is the joy of walking for a long time and then eating delicious food and drinking wine in the Camino de Santiago de Compostela.</p>
 <p align="justify"> Exercise: It is a great way to get those endorphins going and to reduce stress, because of this I even justify exercise as a way to increase overall productivity.  My athletic highlights have been running the Big Sur marathon in just under 4 hours and leading 4 pitches of traditional climbing at Cat in The Hat in Red Rocks.  These days, I just try to stay active.</p>
