--- a/personal.html
+++ b/personal.html
@@ -29,9 +29,9 @@
           <h3>Personal Overview</h3>
           <p align="justify">
           The reason why this section is in my work web page is because what a person does with their time outside of work
-          can affect their professional interactions.  I was honored to be included in a book about Latinx and Hispanic mathematicians in the US <a href="https://community.ams.org/membership/member-library/testimonios"> Testimonios. </a>  
+          can affect their professional interactions.  I was honored to be included in a book about Latinx and Hispanic mathematicians, <a href="https://community.ams.org/membership/member-library/testimonios"> Testimonios. </a>  
           The book is free to members of the American Mathematical Society and my chapter in the book is available online through the <a href="https://www.mathvalues.org/masterblog/testimonios-dr-angel-ramn-pineda-fortn"> Math Values Blog. </a>  
-          That chapter was an amazing opportunity for me to share my mathematical story starting with my grandmothers (abuelitas). <\p>
+          That chapter was an amazing opportunity for me to share my mathematical story starting with my grandmothers (abuelitas). </p>
             
 <p align="justify"> People who are passionate about mathematics usually have a passion in other aspects in their life as well :-) Here are some of the things I do when I am not doing math: </p>
 <p align="justify"> Family: I am married and have two sons.  My life now centers around a partnership in adventures together with my wife and sons.  </p>
