--- a/personal.html
+++ b/personal.html
@@ -42,10 +42,13 @@
 <p align="justify"> Books: I am a slow reader but love it nonetheless.  My favorite books are The Little Prince, The Master and Margarita and a Hundred Years of Solitude.  My favorite math book is Linear Algebra and its Applications by Gilbert Strang.</p>
       </div>
       <div class="splitcontentright">
+         <div>
+          <img width="250" src="./myParents.jpg"> 
+        </div>
+        My parents were medical doctors in a public hospital in Honduras and are a huge inspiration for everything I do.
         <div>
           <img width="250" src="./Bali.jpg"> 
         </div>
-        <br>
         Bali is a place that helps you remember to treat everyone with kindness.
     </div>
   </div>
