--- a/service.html
+++ b/service.html
@@ -40,7 +40,9 @@ From 2015 to 2018 I was a member of the IMU <a href="https://www.mathunion.org/c
 	      program which provides support to mathematics graduate students in developing countries. A paper in the Notices of the American Mathematical Society describes GRAID, <a title="GRAID Notices Article" href="https://www.ams.org/notices/202308/rnoti-p1281.pdf"> Graduate Assistantships in Developing 
 		      Countries (GRAID) Supporting Mathematics Graduate Students in the Countries that Need it Most.</a> In order to help in the funding for GRAID, I am part of a group of mathematicians who run races to fundraise for GRAID <a title="Run for GRAID" href="https://sites.google.com/manhattan.edu/runforgraid/"> Run For GRAID.</a> </p>
 
-<p align="justify"> In terms of service to the research community as a whole, I serve as reviewer for several research journals in medical imaging. </p>
+<p align="justify"> I feel deeply honored to have received the <a href="https://www.ams.org/news?news_id=7239"> 2024 AMS Award for Distinguished Public Service </a>. </p>
+	      
+<p align="justify"> In terms of service to the research community as a whole, I serve as reviewer for several research journals and conferences in mathematics and medical imaging. </p>
 <br>
       </div>
       <div class="splitcontentright">
