--- a/research.html
+++ b/research.html
@@ -58,11 +58,8 @@
         <div>
           <img width="250" src="./MyBrain.jpg"> 
         </div>
-        The Manhattan College MoMI (Mathematics of Medical Imaging) group is a team of students and I working on research together.  
-	      <br>
-		<img width="250" src="./SanaHopeMelissa.jpg">
-		Graduates of the MoMI group.
-        
+        The Hofstra University MoMI (Mathematics of Medical Imaging) group is a team of students and I working on research together.  
+	     
     </div>
   </div>
   <div id="footer">
