--- a/research.html
+++ b/research.html
@@ -39,11 +39,11 @@
            statistical detection of signals as a way of optimizing the methods to accelerate MRI.  The project combines psychophysical studies of humans detecting tumors with
 		   mathematical models to develop model observers that can predict human performance in the detection tasks including search.  These observers are then used to optimize both the acquisition
 		   and reconstruction of undersampled MRI images.  The reconstruction methods include neural networks and data agreement which introduce interesting questions in optimization
-		   and machine learning.  This work is done in collaboration with student researchers
-		   at Manhattan College, and consultants at the University of Southern California, University of California, Santa Barbara, University of Wisconsin, Madison and New York University.  This project was previously funded by 
+		   and machine learning.  This work is being done in collaboration with student researchers
+		   at Hofstra University, and consultants at the University of Southern California, University of California, Santa Barbara, University of Wisconsin, Madison and New York University.  This project was previously funded by 
 		   <a href="https://projectreporter.nih.gov/project_info_description.cfm?aid=9880534&icde=52601021">  NIH R-15 grant 1R15EB029172-01 </a> and is 
 		  currently being funded by <a href="https://reporter.nih.gov/search/UoQqlUTWEUCxK7CFWwPdJA/project-details/10730707">  NIH R-15 grant 2R15EB029172-02 </a>.  The code from the recently submitted
-		  of published peer-reviewed articles from my group can be found in our <a href="https://github.com/MoMI-Manhattan-College">  MoMI Manhattan College GitHub page </a>.
+		  of published peer-reviewed articles from my group can be found in our <a href="https://github.com/MoMI-Manhattan-College">  MoMI  GitHub page </a>.
 		  A couple sample videos of presentations by research students are from a poster presentation at <a href="https://drive.google.com/file/d/1XeumvkXScgumXeMNzVjCrdrYYrfaOAff/view?usp=sharing"> ISMRM 2021 by Rachel Roca on UNet Architectures </a>  and
 		  a talk at <a href="https://drive.google.com/file/d/1XgYiMabdfUYjIctBh0k6XhP09YVhTJ_m/view?usp=sharing"> SPIE Medical Imaging 2021 by Alexandra O'Neill on Observer Modeling </a>".
 		  
