--- a/service.html
+++ b/service.html
@@ -38,7 +38,7 @@ In part because of this experience, I became part of a team that published an <a
 From 2015 to 2018 I was a member of the IMU <a href="https://www.mathunion.org/cdc/about-cdc/about-cdc"> Commission for Developing Countries </a>. As part of that committee, I moderated a <a href="https://www.mathunion.org/cdc/icm/cdc-panel-discussion-and-poster-session-during-icm-2018"> panel on Strengthening Mathematics in the Developing World</a> at the 2018 International Congress of Mathematicians (ICM) in Rio de Janeiro, Brazil.  A <a href="https://www.youtube.com/watch?v=wraXvkf14Y4&feature=youtu.be"> video </a> was produced by ICM TV about the panel.  
 	      I am currently the secretary  <a href="https://www.mathunion.org/cdc/scholarships/graduate-scholarships/graduate-assistantships-developing-countries"> Graduate Assistantships in Developing Countries (GRAID) </a> 
 	      program which provides support to mathematics graduate students in developing countries. A paper in the Notices of the American Mathematical Society describes GRAID, <a title="GRAID Notices Article" href="https://www.ams.org/notices/202308/rnoti-p1281.pdf"> Graduate Assistantships in Developing 
-		      Countries (GRAID) Supporting Mathematics Graduate Students in the Countries that Need it Most.</a> In order to help in the funding for GRAID, I am part of a group of mathematicians who run races to fundraise for GRAID <a title="Run for GRAID" href="https://sites.google.com/manhattan.edu/runforgraid/"> Run For GRAID.</a> </p>
+		      Countries (GRAID) Supporting Mathematics Graduate Students in the Countries that Need it Most.</a> In order to help in the funding for GRAID, I am part of a group of mathematicians who run races to fundraise for GRAID, Run For GRAID.
 
 <p align="justify"> I feel deeply honored to have received the <a href="https://www.ams.org/news?news_id=7239"> 2024 AMS Award for Distinguished Public Service </a>. </p>
 	      
@@ -54,7 +54,7 @@ From 2015 to 2018 I was a member of the IMU <a href="https://www.mathunion.org/c
 	 <div>
           <img width="250" src="./RunForGRAID-MayDayRace.png"> 
         </div>
-        <a title="Run for GRAID" href="https://sites.google.com/manhattan.edu/runforgraid/"> Run For GRAID</a> at the <a title="May Day Race" href="https://sites.math.rutgers.edu/~weibel/mayday.html">May Day Race </a> between Rutgers and Princeton.	
+           Run For GRAID at the <a title="May Day Race" href="https://sites.math.rutgers.edu/~weibel/mayday.html">May Day Race </a> between Rutgers and Princeton.	
     </div>
   </div>
   <div id="footer">
