--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </p><p>
           </p><h3>Contact Information:</h3>
           <br>
-          Office: Roosevelt Hall 315B<br>
+          Office: Roosevelt Hall 315C<br>
           Phone: 516-463-3441<br>
           Email: angel dot pineda at hofstra dot edu<br>
           <br>
