--- a/teaching.html
+++ b/teaching.html
@@ -29,14 +29,14 @@
           </p align="justify">
            I feel that the best path for learning is through enjoyment.  I strive to have my students see the joy in math.  In many of my classes, students work on projects exploring something related to our class which interests them. A major emphasis in my teaching is getting students involved in research.  I am also interested in problem solving, industrial projects, service learning and social justice in mathematics education.
           <p>
-          </p><h3>Teaching Information for Fall 2024:</h3>
+          </p><h3>Teaching Information for Fall 2025:</h3>
           
 	      Courses:<br>
-          <a href="MATH008F24Syllabus.pdf">MATH 008: Elementary Mathematical Statistics </a> <br>
-	      <a href="MATH137F24Syllabus.pdf">MATH 137: Mathematical Probability and Statistics </a> <br>
+          <a href="CSC108-MATH080F25Syllabus.pdf">CSC 108 /MATH 080: Foundations of Data Science </a> <br>
+	      <a href="MATH137F25Syllabus.pdf">MATH 137: Mathematical Probability and Statistics </a> <br>
 		  
           Office Hours:<br>
-          Tuesday 11:15 am-12:00 pm, Thursday 7:45-9:15 am, 1:40 - 2:25 pm or by appointment.<br>
+          Monday: 11:15 A.M. – 12:45 P.M., Wednesday: 7:00 A.M.-7:45 A.M. and 11:15 A.M.- 12:00 P.M. or by appointment.<br>
 	   </div>
 	    <div class="splitcontentright">
         <img width="250" src="./angel-pinedaTeaching.jpg"> 
