Update teaching.html with courses taught section

--- a/teaching.html
+++ b/teaching.html
@@ -37,6 +37,12 @@
 		  
           Office Hours:<br>
           Monday: 11:15 A.M. – 12:45 P.M., Wednesday: 7:00 A.M.-7:45 A.M. and 11:15 A.M.- 12:00 P.M. or by appointment.<br>
+
+		  Courses Taught at Hofstra University:<br>
+           <a href="MATH008F24Syllabus.pdf">MATH 008: Elementary Statistics </a> <br>
+	      <a href="MATH137F25Syllabus.pdf">MATH 137: Mathematical Probability and Statistics I </a> <br>
+		  <a href="MATH138S25Syllabus.pdf">MATH 138: Mathematical Probability and Statistics II </a> <br>
+		  
 	   </div>
 	    <div class="splitcontentright">
         <img width="250" src="./angel-pinedaTeaching.jpg"> 
