Fix link to 'Testimonios' book in personal.html
Updated the link to the book 'Testimonios' in the personal overview section.

--- a/personal.html
+++ b/personal.html
@@ -29,7 +29,7 @@
           <h3>Personal Overview</h3>
           <p align="justify">
           The reason why this section is in my work web page is because what a person does with their time outside of work
-          can affect their professional interactions.  I was honored to be included in a book about Latinx and Hispanic mathematicians, <a href="https://community.ams.org/membership/member-library/testimonios"> Testimonios. </a>  
+          can affect their professional interactions.  I was honored to be included in a book about Latinx and Hispanic mathematicians, <a href="https://bookstore.ams.org/view?ProductCode=CLRM/67"> Testimonios. </a>  
           The book is free to members of the American Mathematical Society and my chapter in the book is available online through the <a href="https://www.mathvalues.org/masterblog/testimonios-dr-angel-ramn-pineda-fortn"> Math Values Blog. </a>  
           That chapter was an amazing opportunity for me to share my mathematical story starting with my grandmothers (abuelitas). </p>
             
